Convert pale grey to purple in color array

--- a/views/lang_freq.erb
+++ b/views/lang_freq.erb
@@ -130,7 +130,7 @@
 
       var color = d3.scale.linear()
                   .domain([0,10,15,20])
-                  .range(["#060026","#c9c9c9","#504494","#e6e6e7"]);
+                  .range(["#060026","#4E4392","#504494","#e6e6e7"]);
 
       drawTreemap(400, 400, '#byte_freq', language_bytes, childrenFunction, nameFunction, sizeFunction, colorFunction, color);
 
